# OSNI

./: CMakeLists.txt  Config.cmake.in  README.md  installdeps.sh  main.cpp
UMLs/: class_diagram.drawio
include/: chebyshev_differentiation.hpp  ode_a.h  ode_ab.h  ode_solver_interface.h  quaternion_integrator.h  spectral_integration_base.h  strain_based_parameterisation.h  twist_integrator.h
src/: chebyshev_differentiation.cpp  ode_a.cpp  ode_ab.cpp  quaternion_integrator.cpp  spectral_integration_base.cpp  strain_based_parameterisation.cpp  twist_integrator.cpp
test/: CMakeLists.txt
